    Blockade führen kann.
  - CCurl: Neue Methode "getCurlHandle" liefert das interne Handle
    der libcurl zurück
  - CSSL: Unterstützung für TLS 1.1, TLS 1.2 und DTLS 1, sowie
    der Komfortmethode "TLS", die alle TLS-Versionen unterstützt,
    aber kein SSLv2 oder SSLv3.
  - Memory-Leak in MkDate behoben
  - Memory-Leak in CDateTime::get behoben
  - Memory-Leak in FileExists behoben

Version 6.4.20 vom 13.07.2014	(SVN-Tag: REL_6_4_20)
  - Funktion GetGlobalEncoding hinzugefügt
  - CID3Tag beachtet nun die globale Einstellung für die Kodierung
    der Strings
  - CID3Tag speichert Text-Tags nun grundsätzlich in UTF-16LE
  - Neue Funktionen: XmlEscape und XMLUnEscape
  - Neue Klasse: PythonHelper
  - Address-Parameter der HexDump-Funktionen ist nun als "const void *"
    deklariert
  - CID3Tag: Fehler beim Schreiben von Tags in AIFF-Files behoben
  - Überflüssige .svn-Ordner aus der Distribution entfernt
  - Unterstützung von AudioCD-s und CDDB mittels der neuen Klassen
    AudioCD und CDDB
  - Configure-Erkennung für nasm, png und jpeg verbessert

Version 6.4.19 vom 16.02.2014	(SVN-Tag: REL_6_4_19)
  - CBinary hat Malloc- und Calloc-Funktion bekommen,
    Save wurde umbenannt in Savef, Load in Loadf. Neue Save- und Load-
    funktionen, die "const CString &" als einzigen Parameter erwarten 
  - CID3Tag kann ID3-Tags aus AIFF-Dateien lesen und schreiben
  - UnitTests für CID3Tag-Funktionen erstellt
  - MemoryHeap-Klasse sammt Unit-Tests aus PPL7 importiert
  - Algorithmus "List" sammt Unit-Tests aus PPL7 importiert
  - CDir wurde refakturiert: "Get" Funktionen geben jetzt
    "const CDirEntry*" statt "CDirEntry*" zurück, Sortierfunktionen
    aus PPL7 importiert, als Sortieralgorithmus wird nun std::multimap
    statt der eigenen AVL-Methoden verwendet. Dies fixt ein Problem
    bei der Sortierung, wenn identische Schlüssel mehrfach auftauchen
    (z.B. gleiche Timestamps oder Dateigrößen). Zusätzlich kann nun